<resources>
    <string name="app_name">Individual_2</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="enter">Войти</string>
    <string name="apple">Войти с Apple</string>
    <string name="inspero">Войти в Inspero</string>
    <string name="google">Войти через Google</string>
    <string name="or">или</string>
    <string name="sign_in">Логин</string>
    <string name="code">Пароль</string>
    <string name="need">Нужен аккаунт?</string>
    <string name="recall">Запомнить меня</string>
    <string name="lose">Забыли пароль?</string>
    <string name="enroll"> <u>Зарегистрироваться</u></string>
    <string name="next">Далее</string>
    <string name="sign_up">Придумайте логин</string>
    <string name="confirm">Подтвердите пароль</string>
    <string name="think_up">Придумайте пароль</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="record">Регистрация</string>
    <string name="proposal">Что вам по душе?</string>
    <string name="choose">выберите категорию</string>
    <string name="graphic">Графический дизайн</string>
    <string name="cloth">Дизайн одежды</string>
    <string name="interior">Дизайн интерьера</string>
    <string name="visualization">Зд визуализация</string>
    <string name="product">Дизайн продукта</string>
    <string name="website">Дизайн сайта</string>
    <string name="nickname_1">@fooniks</string>
    <string name="nickname_2">@rekikk</string>
    <string name="nickname_3">@anastas</string>
    <string name="follow"> <u>Подписаться</u></string>
    <string name="title">Графический дизайн</string>
    <string name="author">Автор: Max Juette</string>
    <string name="nick">Инстаграм: @fooniks</string>
    <string name="save">Сохранить</string>
    <string name="subscribe">Подписаться</string>
    <string name="title_2">Дизайн интерьера</string>
    <string name="nickname_4">@in_espa</string>
    <string name="nickname_5">@wonde_ir</string>
    <string name="nickname_6">@kiato</string>
    <string name="nickname_7">@migue</string>
    <string name="nickname_8">@irik_mo</string>
    <string name="nickname_9">@orrua</string>
    <string name="title_3">Дизайн одежды</string>
    <string name="title_4">Зд визуализация</string>
    <string name="title_5">Дизайн продукта</string>
    <string name="title_6">Дизайн сайта</string>
    <string name="nickname_10">@sunyg</string>
    <string name="nickname_11">@orrire</string>
    <string name="nickname_12">@micles</string>
    <string name="nickname_13">@onyxes</string>
    <string name="nickname_14">@shikor</string>
    <string name="nickname_15">@rigraett</string>
    <string name="nickname_16">@mirateri</string>
    <string name="nickname_17">@peedle</string>
    <string name="nickname_18">@sonks</string>
    <string name="clothes">Одежда</string>
    <string name="posters">Постеры</string>
    <string name="interiors">Интерьер</string>
    <string name="brochures">Брошюры</string>
    <string name="advertisement">Реклама</string>
    <string name="websites">Сайт</string>
    <string name="nickname">@wangaa</string>
    <string name="name_surname">Aleksandra Wang</string>
    <string name="followers">0 подписчиков</string>
    <string name="following">0 подписки</string>
    <string name="photos">0 публикаций</string>
    <string name="set">Настройки</string>
    <string name="change">Изменить профиль</string>
    <string name="account">Настройки аккаунта</string>
    <string name="push">Уведомления</string>
    <string name="privacy">Конфиденциальность</string>
    <string name="background">Изменение фона</string>
    <string name="add">Добавить аккаунт</string>
    <string name="out">Выход</string>
    <string name="all_photos">Все фото</string>
    <string name="button">Button</string>
    <string name="first_page">Home</string>
    <string name="second_page">Search</string>
    <string name="third_page">Post</string>
    <string name="fourth_page">Account</string>
    <string name="welcome_page">Home</string>
</resources>