<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityCategory"
    android:background="@color/purple">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/proposal"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="287dp"
            android:layout_height="46dp"
            android:text="@string/graphic"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="287dp"
            android:layout_height="46dp"
            android:text="@string/cloth"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="287dp"
            android:layout_height="46dp"
            android:text="@string/interior"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="287dp"
            android:layout_height="46dp"
            android:text="@string/visualization"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="287dp"
            android:layout_height="46dp"
            android:text="@string/product"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="287dp"
            android:layout_height="46dp"
            android:text="@string/website" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>